--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2594,11 +2594,11 @@ pdf.accessibility.global.evolution.warningA.title               = Evoluci\u00F3n
 pdf.accessibility.global.evolution.warningAA.title              = Evoluci\u00F3n: Media de Advertencias. AA.
 pdf.accessibility.global.priority.incidence                     = Incidencias Por Prioridad Global
 pdf.accessibility.global.summary.globals                        = Resultados globales
-pdf.accessibility.global.summary.info                           = Los niveles de adecuaci\u00F3n de verificaci\u00F3n, p\u00E1gina y sitio web, as\u00ED como la situaci\u00F3n de cumplimiento del sitio web, son una estimaci\u00F3n en base a unas verificaciones autom\u00E1ticas. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2019 para determinar el nivel de adecuaci\u00F3n REAL del sitio web.
-pdf.accessibility.global.summary.p1                             = En este apartado se muestran los resultados globales del sitio web calculados de acuerdo a la metodolog\u00EDa actual del Observatorio de Accesibilidad Web. Los resultados calculados son los siguientes:
+pdf.accessibility.global.summary.info                           = Este documento muestra \u00FAnicamente el resultado de comprobar verificaciones autom\u00E1ticas en relaci\u00F3n con la declaraci\u00F3n de accesibilidad y no exime de realizar las verificaciones manuales que se estimen oportunas para cumplir con lo recogido en el art\u00EDculo 15. Declaraci\u00F3n de accesibilidad  del RD 1112/2018.
+pdf.accessibility.global.summary.p1                             = En este apartado se muestran los resultados globales de acuerdo a la metodolog\u00EDa Declaraci\u00F3n de accesibilidad del Observatorio de Accesibilidad Web. Los resultados calculados son los siguientes:
 pdf.accessibility.global.summary.p2                             = La {0} refleja la cantidad de verificaciones de accesibilidad que se satisfacen correctamente. Por lo tanto, cuanta m\u00E1s alta sea la puntuaci\u00F3n m\u00E1s verificaciones de accesibilidad se est\u00E1n cumpliendo.
 pdf.accessibility.global.summary.p2.bold                        = puntuaci\u00F3n media del sitio web
-pdf.accessibility.global.summary.p3                             = El {0} del sitio web (Sin declaraci\u00F3n, No v\u00E1lido, Parcial y Completa) est\u00E1 relacionado con el nivel de cumplimiento de las verificaciones que se satisfacen.
+pdf.accessibility.global.summary.p3                             = El {0} del sitio web (Sin declaraci\u00F3n, No v\u00E1lido, Parcial y Completa) depende de qu\u00E9 verificaciones concretas son las que est\u00E1n fallando (para m\u00E1s detalle consultar la metodolog\u00EDa de la Declaraci\u00F3n de accesibilidad).
 pdf.accessibility.global.summary.p3.bold                        = nivel de cumplimiento estimado
 pdf.accessibility.global.summary.p4                             = A continuaci\u00F3n se presenta el resultado de la aplicaci\u00F3n de las verificaciones que componen la metodolog\u00EDa de la Declaraci\u00F3n de Accesibilidad sobre la p\u00E1gina analizada, obteniendo el Valor "0" si la verificaci\u00F3n \u201CFalla\u201D y el Valor \u201C1\u201D si la verificaci\u00F3n \u201CPasa".
 pdf.accessibility.global.summary.p4.bold                        = situaci\u00F3n de cumplimiento estimada
@@ -2609,13 +2609,17 @@ pdf.accessibility.index.global.evolution                        = EVOLUCI\u00D3N
 pdf.accessibility.index.global.summary                          = RESUMEN GLOBAL
 pdf.accessibility.index.title                                   = \u00CDNDICE
 pdf.accessibility.info                                          = Observaci\u00F3n
-pdf.accessibility.info.estimated                                = El resumen de resultados reflejados en este informe contiene datos ESTIMADOS. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2019.\n  \nEste documento NO constituye el \u201CInforme de Revisi\u00F3n de la Accesibilidad\u201D que deber\u00E1 realizar siguiendo los requisitos del art\u00EDculo 17 del RD 1112/2018 para las revisiones de accesibilidad.
+pdf.accessibility.info.estimated                                = Este documento muestra \u00FAnicamente el resultado de comprobar verificaciones autom\u00E1ticas en relaci\u00F3n con la declaraci\u00F3n de accesibilidad y no exime de realizar las verificaciones manuales que se estimen oportunas para cumplir con lo recogido en el art\u00EDculo 15. Declaraci\u00F3n de accesibilidad  del RD 1112/2018.
 pdf.accessibility.infos                                         = Observaciones
-pdf.accessibility.intro.how.p1                                  = En primer lugar es necesario comentar, que junto con este informe de accesibilidad web, tambi\u00E9n se recibe un archivo {0}, que contiene el c\u00F3digo en base al cual se ha realizado la evaluaci\u00F3n de accesibilidad y se han detectado los errores. El archivo contiene una carpeta por cada p\u00E1gina analizada, y dentro de la cual se almacena el c\u00F3digo html, el archivo css y las referencias de la p\u00E1gina en cuesti\u00F3n. 
+pdf.accessibility.intro.how.p1                                  = En primer lugar es necesario comentar, que junto a este informe, tambi\u00E9n se env\u00EDa un archivo {0}, que contiene el c\u00F3digo fuente de la p\u00E1gina web analizada (el c\u00F3digo HTML, el archivo CSS y las referencias de la p\u00E1gina) y sobre la que se ha realizado al menos una de las  comprobaciones autom\u00E1ticas de las verificaciones que componen la metodolog\u00EDa de la Declaraci\u00F3n de Accesibilidad (Presencia de la declaraci\u00F3n de accesibilidad). Las dem\u00E1s verificaciones se han realizado sobre la p\u00E1gina de la declaraci\u00F3n de accesibilidad, si existe.
 pdf.accessibility.intro.how.p1.bold                             = c\u00F3digo_fuente.zip
 pdf.accessibility.intro.how.p2                                  = A continuaci\u00F3n, se detalla c\u00F3mo est\u00E1 organizado el informe actual.
-pdf.accessibility.intro.how.p3                                  = En primer lugar, el apartado \u201C2 Detalles del sitio web analizado\u201D muestra a t\u00EDtulo informativo los datos con los que el Observatorio ha categorizado al sitio web analizado, en cuanto a complejidad, tem\u00E1tica, distribuci\u00F3n geogr\u00E1fica, recurrencia en el an\u00E1lisis de la semilla (fija, par o impar), as\u00ED como si el sitio web ha sido destacado desde el colectivo de las asociaciones de personas con discapacidad. 
-pdf.accessibility.intro.how.p4                                  = A continuaci\u00F3n, el apartado \u201C3 Muestra de p\u00E1ginas\u201D indica el listado de p\u00E1ginas web analizadas, cuyo n\u00FAmero var\u00EDa en funci\u00F3n de la complejidad del sitio web.
+pdf.accessibility.intro.how.p3                                  = En primer lugar, el apartado [anchor1] es el apartado que aporta una visi\u00F3n general de la situaci\u00F3n en la que se encuentra la Declaraci\u00F3n de accesibilidad, mostrando un resumen de los resultados del informe.
+pdf.accessibility.intro.how.p3.anchor1.text                     = 2. Resumen de resultados
+pdf.accessibility.intro.how.p3.anchor1.url                      = anchor_detalle_sitio_web
+pdf.accessibility.intro.how.p4                                  = Por \u00FAltimo, el apartado [anchor1], que se mostrar\u00E1 solo cuando se detecte alg\u00FAn problema, indica las comprobaciones en las que ha fallado.\n
+pdf.accessibility.intro.how.p4.anchor1.text                     = 3. Incidencias
+pdf.accessibility.intro.how.p4.anchor1.url                      = anchor_incidencias
 pdf.accessibility.intro.how.p5                                  = El apartado \u201C4 Resumen de resultados\u201D recoge un resumen de los resultados del informe, indicando la puntuaci\u00F3n del sitio web, nivel de adecuaci\u00F3n estimado, situaci\u00F3n de cumplimiento estimada, as\u00ED como un conjunto de rankings elaborados por el Observatorio. Tambi\u00E9n se aporta la Puntuaci\u00F3n media de cada p\u00E1gina analizada as\u00ED como la Puntuaci\u00F3n media de cada verificaci\u00F3n a nivel de sitio web. Este apartado recoge informaci\u00F3n agregada, ya sea a nivel de sitio web, a nivel de p\u00E1gina (indicando la puntuaci\u00F3n media de la p\u00E1gina agregando el conjunto de verificaciones) o a nivel de verificaci\u00F3n (indicando la puntuaci\u00F3n media de la verificaci\u00F3n agregando la informaci\u00F3n de todas las p\u00E1ginas). 
 pdf.accessibility.intro.how.p6                                  = Por tanto la informaci\u00F3n indicada hasta ahora aporta una visi\u00F3n global del cumplimiento de la accesibilidad, pero no es informaci\u00F3n desagregada \u00FAtil para mejorar la accesibilidad. Dicha informaci\u00F3n desagregada se muestra en los apartados siguientes.
 pdf.accessibility.intro.how.p7                                  = El apartado \u201C5 Resultados por verificaci\u00F3n \u201D presenta en modo tabla el valor y la modalidad para cada una de las verificaciones y para cada una de las p\u00E1ginas analizadas. Adem\u00E1s, en la \u00FAltima fila de la tabla se recoge la conformidad estimada de cada una de las verificaciones a nivel de sitio web. Estas tablas aportan mucha informaci\u00F3n, pues permiten obtener una visi\u00F3n r\u00E1pida de qu\u00E9 verificaciones est\u00E1n fallando y en qu\u00E9 p\u00E1ginas. A partir de esta informaci\u00F3n, ser\u00E1 m\u00E1s sencillo tomar decisiones sobre qu\u00E9 errores corregir antes o qu\u00E9 p\u00E1ginas (o tipo de p\u00E1ginas) concentran los problemas.
@@ -2624,6 +2628,14 @@ pdf.accessibility.intro.how.p8.anchor1.text                     = comunidad de a
 pdf.accessibility.intro.how.p8.anchor1.url                      = http://administracionelectronica.gob.es/comunidades/accesibilidad
 pdf.accessibility.intro.how.title                               = C\u00F3mo utilizar el informe 
 pdf.accessibility.intro.info                                    = Este documento muestra \u00FAnicamente el resultado de aplicar verificaciones autom\u00E1ticas a la comprobaci\u00F3n de la declaraci\u00F3n de accesibilidad y no exime de realizar las verificaciones manuales que se estimen oportunas para cumplir con lo recogido en el art\u00EDculo 15 del RD 1112/2018.
+pdf.accessibility.intro.next.basic.service.list.1               = {0} indicados en este informe en el apartado [anchor1].
+pdf.accessibility.intro.next.basic.service.list.1.anchor1.text  = 3. Incidencias
+pdf.accessibility.intro.next.basic.service.list.1.anchor1.url   = anchor_incidencias
+pdf.accessibility.intro.next.basic.service.list.1.bold1         = Corregir los errores
+pdf.accessibility.intro.next.basic.service.list.2               = Una vez realizadas las correcciones oportunas se recomienda {0} del Observatorio (tipo de informe \u201CComprobaci\u00F3n Declaraci\u00F3n de Accesibilidad), al que se accede a trav\u00E9s de la [anchor1]. Se podr\u00E1n solicitar tantos informes como se necesiten.
+pdf.accessibility.intro.next.basic.service.list.2.anchor1.text  = Comunidad de Accesibilidad
+pdf.accessibility.intro.next.basic.service.list.2.anchor1.url   = http://administracionelectronica.gob.es/comunidades/accesibilidad
+pdf.accessibility.intro.next.basic.service.list.2.bold          = solicitar un nuevo informe al servicio de diagn\u00F3stico en l\u00EDnea
 pdf.accessibility.intro.next.basic.service.list.4.anchor1.url   = https://administracionelectronica.gob.es/pae_Home/dam/jcr:bf784fe3-d673-4e44-8cd3-b818b6293280/Guia_de_Validacion_de_Accesibilidad_Web_v2_0.pdf
 pdf.accessibility.intro.next.list.1                             = indicados en este informe, en el apartado Incidencias de cada p\u00E1gina. Debido a que el tama\u00F1o de este documento podr\u00EDa crecer mucho, el apartado incidencias no recoge el detalle de los errores de accesibilidad, sino que solamente recoge un resumen de los mismos. Para conocer el detalle de dichos errores, deber\u00E1 ayudarse del servicio de diagn\u00F3stico en l\u00EDnea del Observatorio, al que se accede a trav\u00E9s de la [anchor1]. Se podr\u00E1n solicitar tantos informes de accesibilidad web como se necesiten y para todas las p\u00E1ginas que se deseen analizar del sitio web.
 pdf.accessibility.intro.next.list.1.anchor1.text                = comunidad de accesibilidad
@@ -2654,12 +2666,12 @@ pdf.accessibility.intro.p1.anchor1.text                         = Real Decreto 1
 pdf.accessibility.intro.p1.anchor1.url                          = https://www.boe.es/buscar/act.php?id=BOE-A-2018-12699
 pdf.accessibility.intro.p1.anchor2.text                         = Directiva (UE) 2016/2102 del Parlamento Europeo y del Consejo, de 26 de octubre de 2016, sobre la accesibilidad de los sitios web y aplicaciones para dispositivos m\u00F3viles de los organismos del sector p\u00FAblico
 pdf.accessibility.intro.p1.anchor2.url                          = https://eur-lex.europa.eu/legal-content/ES/TXT/?uri=uriserv:OJ.L_.2016.327.01.0001.01.SPA&toc=OJ:L:2016:327:FULL
-pdf.accessibility.intro.p2                                      = Por esta raz\u00F3n, el {0} ha elaborado un nuevo informe basado en la [anchor1], el cual comprueba \u00FAnicamente la presencia y adecuaci\u00F3n de la declaraci\u00F3n de accesibilidad del sitio web.
+pdf.accessibility.intro.p2                                      = En este contexto, el {0} ha desarrollado la [anchor1] para comprobar la presencia y adecuaci\u00F3n de la declaraci\u00F3n de accesibilidad. 
 pdf.accessibility.intro.p2.anchor1.text                         = metodolog\u00EDa de la Declaraci\u00F3n de Accesibilidad
 pdf.accessibility.intro.p2.anchor1.url                          = http://administracionelectronica.gob.es/PAe/accesibilidad/metodologia_declaracion
 pdf.accessibility.intro.p2.bold1                                = Observatorio de Accesibilidad Web
-pdf.accessibility.intro.p3                                      = El informe {0} basado en dicha metodolog\u00EDa
-pdf.accessibility.intro.p3.bold1                                = ofrece una estimaci\u00F3n de la situaci\u00F3n en la que se encuentra la declaraci\u00F3n de accesibilidad en ese portal
+pdf.accessibility.intro.p3                                      = En este documento, recibe la revisi\u00F3n realizada por el Observatorio de Accesibilidad Web basada en la metodolog\u00EDa Declaraci\u00F3n de accesibilidad y {0}
+pdf.accessibility.intro.p3.bold1                                = ofrece una estimaci\u00F3n de la situaci\u00F3n en la que se encuentra la declaraci\u00F3n de accesibilidad del  sitio web analizado.
 pdf.accessibility.intro.p4                                      = En este documento, recibe la revisi\u00F3n realizada por el Observatorio de Accesibilidad Web en el marco del seguimiento simplificado {0}
 pdf.accessibility.intro.p4.bold                                 = que permite realizar una estimaci\u00F3n del grado de cumplimiento en materia de accesibilidad de su sitio web. 
 pdf.accessibility.intro.title                                   = Introducci\u00F3n
@@ -2710,7 +2722,7 @@ pdf.accessibility.seed.detail.tabla.recurrencia                 = Recurrencia
 pdf.accessibility.seed.detail.tabla.tematica                    = Tem\u00E1tica
 pdf.accessibility.seed.detail.tabla.titulo                      = Detalles del sitio web
 pdf.accessibility.seed.detail.title                             = Detalles del sitio web analizado
-pdf.accessibility.subtitle                                      = SEGUIMIENTO SIMPLIFICADO\nUNE-EN 301549:2019
+pdf.accessibility.subtitle                                      = COMPROBACI\u00D3N DECLARACI\u00D3N DE ACCESIBILIDAD
 pdf.accessibility.summary.info                                  = Este documento muestra \u00FAnicamente el resultado de aplicar verificaciones autom\u00E1ticas a la comprobaci\u00F3n de la declaraci\u00F3n de accesibilidad y no exime de realizar las verificaciones manuales que se estimen oportunas para cumplir con lo recogido en el art\u00EDculo 15 del RD 1112/2018.
 pdf.accessibility.summary.table.evolution                       = Evoluci\u00F3n
 pdf.accessibility.summary.table.evolution.equal                 = se mantiene
@@ -2718,9 +2730,9 @@ pdf.accessibility.summary.table.evolution.improve               = mejora
 pdf.accessibility.summary.table.evolution.worse                 = empeora
 pdf.accessibility.summary.table.pm                              = Puntuaci\u00F3n Media del Sitio web
 pdf.accessibility.summary.table.result                          = Resultado
-pdf.accessibility.title                                         = INFORME DE\nACCESIBILIDAD WEB\nCOMPROBACI\u00D3N DECLARACI\u00D3N DE ACCESIBILIDAD (BETA)
+pdf.accessibility.title                                         = INFORME DE\nACCESIBILIDAD WEB
 pdf.accessibility.title.basic.service                           = INFORME DE\nACCESIBILIDAD WEB
-pdf.accessibility.title.basic.service.2                         = COMPROBACI\u00D3N DECLARACI\u00D3N DE ACCESIBILIDAD (BETA)
+pdf.accessibility.title.basic.service.2                         = COMPROBACI\u00D3N DECLARACI\u00D3N DE ACCESIBILIDAD
 pdf.accessibility.warning                                       = Advertencia
 pdf.accessibility.warnings                                      = Advertencias
 pdf.error.no.results                                            = No se ha podido generar el informe PDF. El rastreo no tiene resultados asociados.
