Updated forms to allow XML/excel import/export
Former-commit-id: d46465ee7e45d7a7d172dd0c8e6b2f95a82c1544

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -269,6 +269,8 @@ cargar.semilla.observatorio.dependencia      = Dependencia
 cargar.semilla.observatorio.directorio       = Directorio
 cargar.semilla.observatorio.eliminada        = Eliminada
 cargar.semilla.observatorio.exportar.todo    = Exportar
+cargar.semilla.observatorio.exportar.todo.xml= Exportar .xml
+cargar.semilla.observatorio.exportar.todo.xlsx= Exportar .xlsx
 cargar.semilla.observatorio.importar.todo    = Importar
 cargar.semilla.observatorio.nombre           = Nombre
 cargar.semilla.observatorio.nueva.semilla    = Nueva Semilla
@@ -297,7 +299,7 @@ categoria.semillas.enlace.externo             = Acceder a la p\u00E1gina {0} (en
 categoria.semillas.fichero                    = Fichero de semillas
 categoria.semillas.fichero.ejemplo            = Ejemplo
 categoria.semillas.fichero.ejemplo.title      = Fichero de semillas de ejemplo
-categoria.semillas.fichero.info               = Para adjuntar varias semillas de una forma r\u00E1pida, se puede subir un archivo XML que tenga un formato igual que el del ejemplo siguiente: {0}
+categoria.semillas.fichero.info               = Para adjuntar varias semillas de una forma r\u00E1pida, se puede subir un archivo XML o .xlsx con el mismo formato que los siguientes ejemplos: {0} {1}
 categoria.semillas.lista                      = Lista de segmentos de semillas
 categoria.semillas.lista.semillas             = Lista de semillas asociadas a la categor\u00EDa
 categoria.semillas.nombre                     = Semilla
