Add principal field to categoriea
Add not apply con compilance evolution graphics and table

Fix literals on export annexes on accesibility cartdidge


Former-commit-id: dfd7086be9478b97bbb698cb24a4a1f3d96fef64

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -268,11 +268,13 @@ cargar.semilla.observatorio.complejidad      = Complejidad
 cargar.semilla.observatorio.dependencia      = Dependencia
 cargar.semilla.observatorio.directorio       = Directorio
 cargar.semilla.observatorio.eliminada        = Eliminada
+cargar.semilla.observatorio.eliminar         = Eliminar
 cargar.semilla.observatorio.exportar.todo    = Exportar
 cargar.semilla.observatorio.importar.todo    = Importar
 cargar.semilla.observatorio.nombre           = Nombre
 cargar.semilla.observatorio.nueva.semilla    = Nueva Semilla
 cargar.semilla.observatorio.operaciones      = Operaciones
+cargar.semilla.observatorio.principal        = Principal
 cargar.semilla.observatorio.total            = Se van a actualizar un total de <strong>{0}</strong> semillas
 cargar.semilla.observatorio.total.nuevas     = Se van a crear un total de <strong>{0}</strong> semillas
 cargar.semilla.observatorio.total.sincambios = No se van a alterar un total de <strong>{0}</strong> semillas
@@ -1260,10 +1262,12 @@ modality.fail = Falla
 modality.pass = Pasa
 
 modificar.categoria                                = Modificar Segmento
+modificar.categoria.clave                          = Agrupado por:
 modificar.categoria.editar.termino.categoria.alt   = Editar T\u00E9rmino Categor\u00EDa
 modificar.categoria.eliminar.termino.categoria.alt = Eliminar T\u00E9rmino Categor\u00EDa
 modificar.categoria.nombre                         = Nombre:
 modificar.categoria.nuevo.termino                  = Nuevo t\u00E9rmino
+modificar.categoria.principal                      = Es principal:
 modificar.categoria.terminos                       = T\u00E9rminos
 modificar.categoria.terminos.acciones              = Acciones
 modificar.categoria.terminos.peso                  = Peso
@@ -2907,6 +2911,7 @@ resultados.anonimos.porc.portales.a                              = A
 resultados.anonimos.porc.portales.aa                             = AA
 resultados.anonimos.porc.portales.full                           = Completo
 resultados.anonimos.porc.portales.incompleto                     = No v\u00E1lida
+resultados.anonimos.porc.portales.na                             = No aplica
 resultados.anonimos.porc.portales.nc                             = No conforme
 resultados.anonimos.porc.portales.nv                             = No V\u00E1lido
 resultados.anonimos.porc.portales.parcial                        = Parcial
