--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -289,6 +289,7 @@ cargar.semilla.observatorio.nombre           = Nombre
 cargar.semilla.observatorio.nueva.semilla    = Nueva Semilla
 cargar.semilla.observatorio.observaciones    = Observaciones
 cargar.semilla.observatorio.operaciones      = Operaciones
+cargar.semilla.observatorio.principal        = Principal
 cargar.semilla.observatorio.total            = Se van a actualizar un total de <strong>{0}</strong> semillas
 cargar.semilla.observatorio.total.errores    = No se pueden cargar <strong>{0}</strong> semillas por tener errores
 cargar.semilla.observatorio.total.nuevas     = Se van a crear un total de <strong>{0}</strong> semillas
@@ -1416,6 +1417,7 @@ modificar.categoria.editar.termino.categoria.alt   = Editar T\u00E9rmino Categor
 modificar.categoria.eliminar.termino.categoria.alt = Eliminar T\u00E9rmino Categor\u00EDa
 modificar.categoria.nombre                         = Nombre:
 modificar.categoria.nuevo.termino                  = Nuevo t\u00E9rmino
+modificar.categoria.principal                      = Es principal:
 modificar.categoria.terminos                       = T\u00E9rminos
 modificar.categoria.terminos.acciones              = Acciones
 modificar.categoria.terminos.peso                  = Peso
@@ -3214,6 +3216,7 @@ resultados.anonimos.porc.pasa                                    = Porcentaje Pa
 resultados.anonimos.porc.portales                                = Porcentaje de Portales
 resultados.anonimos.porc.portales.a                              = A
 resultados.anonimos.porc.portales.aa                             = AA
+resultados.anonimos.porc.portales.na                             = No aplica
 resultados.anonimos.porc.portales.nc                             = No conforme
 resultados.anonimos.porc.portales.nv                             = No V\u00E1lido
 resultados.anonimos.porc.portales.parcial                        = No V\u00E1lido
