Fix accesibility cartidge aggregate report data
Select accesibility cartdige template


Former-commit-id: aba0660ea7ffed452c05f954e8b2a552ecbacd81

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2791,6 +2791,7 @@ report.config.plantillas.filter.segmentos.info       = Para que esta plantilla f
 report.config.plantillas.filter.title                = Plantillas a usar para generar el informe
 report.config.title                                  = T\u00EDtulo del informe
 report.config.title.default                          = Informe de observatorio de accesibilidad web
+report.config.title.default.acc                      = INFORME AGREGADO DE LAS DECLARACIONES DE ACCESIBILIDAD
 report.config.title.label                            = T\u00EDtulo del documento generado
 report.evolution.allocation.graphic.title.fixed      = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: parte fija
 report.evolution.allocation.graphic.title.segment    = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: segmento {0}
