Fix graphics in web page
Former-commit-id: 3827c6f2746d5d32fd1a41b450fe5dac786f7ac8

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2449,7 +2449,7 @@ observatory.graphic.accessibility.evolution.approval.A.title                  = 
 observatory.graphic.accessibility.evolution.approval.AA.title                 = Evoluci\u00F3n del Nivel de Conformidad de Accesibilidad: AA
 observatory.graphic.accessibility.evolution.approval.NV.title                 = Evoluci\u00F3n del Nivel de Conformidad de Accesibilidad: No V\u00E1lido
 observatory.graphic.accessibility.level.allocation.by.page.title              = Distribuci\u00F3n de p\u00E1ginas seg\u00FAn el Nivel de adecuaci\u00F3n estimado
-observatory.graphic.accessibility.level.allocation.name                       = DistribuccionNivelCumplimientoGlobal
+observatory.graphic.accessibility.level.allocation.name                       = DistribucionNivelCumplimientoGlobal
 observatory.graphic.accessibility.level.allocation.segment.name               = DistribucionNivelAccesibilidadS{0}
 observatory.graphic.accessibility.level.allocation.segment.title              = Nivel de adecuaci\u00F3n estimado: {0}
 observatory.graphic.accessibility.level.allocation.title                      = Distribuci\u00F3n del Nivel de accesibilidad global
@@ -2911,7 +2911,7 @@ resultados.anonimos.porc.portales                                = Porcentaje de
 resultados.anonimos.porc.portales.a                              = A
 resultados.anonimos.porc.portales.aa                             = AA
 resultados.anonimos.porc.portales.full                           = Completo
-resultados.anonimos.porc.portales.incompleto                     = No v\u00E1lida
+resultados.anonimos.porc.portales.incompleto                     = No v\u00E1lido
 resultados.anonimos.porc.portales.na                             = No aplica
 resultados.anonimos.porc.portales.nc                             = No conforme
 resultados.anonimos.porc.portales.nv                             = No V\u00E1lido
