--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -3217,6 +3217,7 @@ resultados.anonimos.porc.pasa                                    = Porcentaje Pa
 resultados.anonimos.porc.portales                                = Porcentaje de Portales
 resultados.anonimos.porc.portales.a                              = A
 resultados.anonimos.porc.portales.aa                             = AA
+resultados.anonimos.porc.portales.incompleto                     = No v\u00E1lido
 resultados.anonimos.porc.portales.na                             = No aplica
 resultados.anonimos.porc.portales.nc                             = No conforme
 resultados.anonimos.porc.portales.nv                             = No V\u00E1lido
