Stop in progress observatory
Former-commit-id: ca1c0789418a36b753af1e143542c2ab1a2a75db

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -3133,6 +3133,7 @@ resultado.observatorio.rastreo.realizado.eliminar                = Eliminar
 resultado.observatorio.rastreo.realizado.estado                  = Estado
 resultado.observatorio.rastreo.realizado.estado.error            = Incompleto
 resultado.observatorio.rastreo.realizado.estado.lanzado          = Lanzado
+resultado.observatorio.rastreo.realizado.estado.parado           = Detenido
 resultado.observatorio.rastreo.realizado.estado.relanzado        = Relanzado
 resultado.observatorio.rastreo.realizado.estado.terminado        = Terminado
 resultado.observatorio.rastreo.realizado.fecha.ejecucion         = Fecha de Ejecuci\u00F3n
