Confirmation message on stop observatory
Former-commit-id: e37c7aa150dc8223540b44c62b866a19c99b3649

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2537,6 +2537,10 @@ observatory.graphics.level.AA                                                 = 
 observatory.graphics.level.NV                                                 = No V\u00E1lido
 observatory.graphics.level.Parcial                                            = No V\u00E1lido
 observatory.servicio.diagnostico.url                                          = http://administracionelectronica.gob.es/comunidades/accesibilidad
+observatory.stop.info                                                         = <strong>IMPORTANTE</strong> Esta operaci\u00F3n detendr\u00E1 la ejecuci\u00F3n del observatorio y para continuar con ella, deber\u00E1 ejecutar el relanzmiento de forma manual. \n<p>No se eliminar\u00E1 ning\u00FAn an\u00E1lisis previo a esta operaci\u00F3n.</p>
+observatory.stop.question                                                     = \u00BFEst\u00E1 seguro que desea parar la ejecuci\u00F3n del observatorio?
+observatory.stop.success.message                                              = Detenci\u00F3n de la ejecuci\u00F3n de la iteraci\u00F3n del observatorio realizada con \u00E9xito
+observatory.stop.title                                                        = Detener la ejecuci\u00F3n del observatorio
 
 pagina.error   = Error
 pagina.exito   = \u00C9xito
@@ -3102,6 +3106,7 @@ third.level.incidents.export.bs = Prioridad 3
 third.level.incidents.fulltext  = Incidencias de Prioridad 3
 
 tooltip.obs.add.seed = A\u00F1adir semilla
+tooltip.status.stop  = Parar esta iteraci\u00F3n del observatorio
 
 topN.isnumber = El campo 'P\u00E1ginas por nivel' debe ser un n\u00FAmero entero positivo.
 
