WIP Observatory global relaunch congfguration
Former-commit-id: 12efba9ddcacd9c51a5890c1678f797a87939b75

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2442,6 +2442,10 @@ observatory.aspect.presentation                                               = 
 observatory.aspect.structure                                                  = Estructura
 observatory.check.modality.text.green                                         = Por lo tanto, valor = 0 y modalidad = pasa
 observatory.check.modality.text.red                                           = Por lo tanto, valor = 0 y modalidad = falla
+observatory.extra.config.button                                               = Configuraci\u00F3n global
+observatory.extra.config.name                                                 = Nombre
+observatory.extra.config.title                                                = Configuraci\u00F3n global de observatorios
+observatory.extra.config.value                                                = Valor
 observatory.graphic.accesibility.evolution.approval.A.name                    = EvolucionNivelConformidadAccesibilidadA
 observatory.graphic.accesibility.evolution.approval.AA.name                   = EvolucionNivelConformidadAccesibilidadAA
 observatory.graphic.accesibility.evolution.approval.NV.name                   = EvolucionNivelConformidadAccesibilidadNV
