--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2443,6 +2443,7 @@ observatory.aspect.structure                                                  = 
 observatory.check.modality.text.green                                         = Por lo tanto, valor = 0 y modalidad = pasa
 observatory.check.modality.text.red                                           = Por lo tanto, valor = 0 y modalidad = falla
 observatory.extra.config.button                                               = Configuraci\u00F3n global
+observatory.extra.config.info                                                 = Configuraci\u00F3n global aplicable a todos los observatorios. Esta configuraci\u00F3n es utilizada por los procesos de relanzamiento. Puede editar la configuraci\u00F3n pulsando sobre los valores de la tabla inferior:
 observatory.extra.config.name                                                 = Nombre
 observatory.extra.config.title                                                = Configuraci\u00F3n global de observatorios
 observatory.extra.config.value                                                = Valor
