--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -2609,6 +2609,7 @@ observatory.check.modality.text.green                                         = 
 observatory.check.modality.text.red                                           = Por lo tanto, valor = 0 y modalidad = falla
 observatory.evolution.segment.title                                           = Evoluci\u00F3n del segmento {0}
 observatory.extra.config.button                                               = Configuraci\u00F3n global
+observatory.extra.config.info                                                 = Configuraci\u00F3n global aplicable a todos los observatorios. Esta configuraci\u00F3n es utilizada por los procesos de relanzamiento. Puede editar la configuraci\u00F3n pulsando sobre los valores de la tabla inferior:
 observatory.extra.config.name                                                 = Nombre
 observatory.extra.config.title                                                = Configuraci\u00F3n global de observatorios
 observatory.extra.config.value                                                = Valor
