Fix fixed graphics on global report
Fix agregate templates


Former-commit-id: 7899f2f8015e95f24ea58b47a4361104d0bc9cdd

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2789,6 +2789,8 @@ report.config.plantillas.filter.evol.segmentos.info  = Para que esta plantilla f
 report.config.plantillas.filter.segmentos            = Plantilla de la secci\u00F3n de segmentos
 report.config.plantillas.filter.segmentos.info       = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>categorysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. <br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
 report.config.plantillas.filter.title                = Plantillas a usar para generar el informe
+report.config.tags.fixed.filter.info                 = Seleccionar las etiquetas de recurrencia a tener en cuenta en el apartado de Evoluci\u00F3n de la parte fija
+report.config.tags.fixed.title                       = Etiquetas de recurrencia (apartado de Evoluci\u00F3n de la parte fija)
 report.config.title                                  = T\u00EDtulo del informe
 report.config.title.default                          = Informe de observatorio de accesibilidad web
 report.config.title.default.acc                      = INFORME AGREGADO DE LAS DECLARACIONES DE ACCESIBILIDAD
