Status observatory view less threshold results
Former-commit-id: 42099b58a8e22a10cc3b6d3b05fd6ffe89e63c77

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2542,6 +2542,9 @@ observatory.graphics.level.AA                                                 = 
 observatory.graphics.level.NV                                                 = No V\u00E1lido
 observatory.graphics.level.Parcial                                            = No V\u00E1lido
 observatory.servicio.diagnostico.url                                          = http://administracionelectronica.gob.es/comunidades/accesibilidad
+observatory.status.less.threshold.caption                                     = Informaci\u00F3n de an\u00E1lisis por debajo del umbral
+observatory.status.less.threshold.title                                       = Portales por debajo del umbral
+observatory.status.no.results.caption                                         = Informaci\u00F3n de an\u00E1lisis sin resultados
 observatory.stop.info                                                         = <strong>IMPORTANTE</strong> Esta operaci\u00F3n detendr\u00E1 la ejecuci\u00F3n del observatorio y para continuar con ella, deber\u00E1 ejecutar el relanzmiento de forma manual. \n<p>No se eliminar\u00E1 ning\u00FAn an\u00E1lisis previo a esta operaci\u00F3n.</p>
 observatory.stop.question                                                     = \u00BFEst\u00E1 seguro que desea parar la ejecuci\u00F3n del observatorio?
 observatory.stop.success.message                                              = Detenci\u00F3n de la ejecuci\u00F3n de la iteraci\u00F3n del observatorio realizada con \u00E9xito
