[RelaunchSelection] In result page, allow select lines and launch again only selection.
Former-commit-id: 261c17d65bd629b4689c923afde94c20c68d760c

--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -2734,6 +2734,8 @@ observatory.status.last.total.url.last.end                                    = 
 observatory.status.no.results.caption                                         = Analysis information without results
 observatory.status.no.results.name                                            = Name
 observatory.status.no.results.relaunch                                        = Relaunch
+observatory.status.no.results.relaunchselected                                = Relaunch selected
+observatory.status.no.results.selector                                        = Selector
 observatory.status.no.results.title                                           = Portals with no results
 observatory.status.pending.caption                                            = Information from portals not yet analyzed
 observatory.status.pending.name                                               = Name
